--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,10 @@ dependencies:
   flutter_native_splash: ^2.3.10
   alert_dialog: ^1.0.2
   image_picker: ^0.8.4
+  fluttertoast: ^8.2.4
+  another_stepper: ^1.2.2
+  intl: ^0.17.0
+  flutter_spinkit: ^5.2.0
 
 
 dev_dependencies:
