--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,10 @@ dependencies:
   image_picker: ^0.8.4
   fluttertoast: ^8.2.4
   another_stepper: ^1.2.2
+  path_provider: ^2.1.2
   intl: ^0.17.0
   flutter_spinkit: ^5.2.0
+
 
 
 dev_dependencies:
